Added data folder

--- a/data/data_analytics.ipynb
+++ b/data/data_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,26 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-8-65abecd2f338>:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  df = pd.read_csv('results_fcfs-400-0,6.csv',\n"
+      "<ipython-input-70-7c0f2cde1a30>:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  df = pd.read_csv('results_lcfs-400-0,6.csv',\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('results_fcfs-400-0,6.csv',\n",
+    "df = pd.read_csv('results_lcfs-400-0,6.csv',\n",
     " delimiter=', ', header=None, names=['batch', 'E_W', 'E_Nq', 'E_Ns'], skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -76,37 +76,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.406293</td>\n",
-       "      <td>0.7325</td>\n",
-       "      <td>0.6050</td>\n",
+       "      <td>1.397227</td>\n",
+       "      <td>0.7825</td>\n",
+       "      <td>0.5700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.923679</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>0.4850</td>\n",
+       "      <td>1.391152</td>\n",
+       "      <td>0.8975</td>\n",
+       "      <td>0.5150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>1.669179</td>\n",
-       "      <td>0.9725</td>\n",
+       "      <td>1.973299</td>\n",
+       "      <td>1.2775</td>\n",
        "      <td>0.6600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1.407936</td>\n",
-       "      <td>0.8950</td>\n",
-       "      <td>0.6225</td>\n",
+       "      <td>2.112897</td>\n",
+       "      <td>1.5325</td>\n",
+       "      <td>0.6900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1.329512</td>\n",
-       "      <td>0.8050</td>\n",
-       "      <td>0.6125</td>\n",
+       "      <td>1.567703</td>\n",
+       "      <td>1.0100</td>\n",
+       "      <td>0.6050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -118,37 +118,37 @@
        "    <tr>\n",
        "      <th>3195</th>\n",
        "      <td>3196</td>\n",
-       "      <td>2.454328</td>\n",
-       "      <td>1.3650</td>\n",
-       "      <td>0.6325</td>\n",
+       "      <td>1.667221</td>\n",
+       "      <td>1.2375</td>\n",
+       "      <td>0.6125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3196</th>\n",
        "      <td>3197</td>\n",
-       "      <td>1.097265</td>\n",
-       "      <td>0.6125</td>\n",
-       "      <td>0.5600</td>\n",
+       "      <td>1.418193</td>\n",
+       "      <td>0.9000</td>\n",
+       "      <td>0.6250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3197</th>\n",
        "      <td>3198</td>\n",
-       "      <td>1.395174</td>\n",
-       "      <td>0.8100</td>\n",
-       "      <td>0.5850</td>\n",
+       "      <td>1.224724</td>\n",
+       "      <td>0.6825</td>\n",
+       "      <td>0.6025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3198</th>\n",
        "      <td>3199</td>\n",
-       "      <td>0.895653</td>\n",
-       "      <td>0.5075</td>\n",
-       "      <td>0.5625</td>\n",
+       "      <td>1.338024</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.6300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3199</th>\n",
        "      <td>3200</td>\n",
-       "      <td>2.016078</td>\n",
-       "      <td>1.2750</td>\n",
-       "      <td>0.6325</td>\n",
+       "      <td>1.622891</td>\n",
+       "      <td>1.0550</td>\n",
+       "      <td>0.6075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -157,22 +157,22 @@
       ],
       "text/plain": [
        "      batch       E_W    E_Nq    E_Ns\n",
-       "0         1  1.406293  0.7325  0.6050\n",
-       "1         2  0.923679  0.4925  0.4850\n",
-       "2         3  1.669179  0.9725  0.6600\n",
-       "3         4  1.407936  0.8950  0.6225\n",
-       "4         5  1.329512  0.8050  0.6125\n",
+       "0         1  1.397227  0.7825  0.5700\n",
+       "1         2  1.391152  0.8975  0.5150\n",
+       "2         3  1.973299  1.2775  0.6600\n",
+       "3         4  2.112897  1.5325  0.6900\n",
+       "4         5  1.567703  1.0100  0.6050\n",
        "...     ...       ...     ...     ...\n",
-       "3195   3196  2.454328  1.3650  0.6325\n",
-       "3196   3197  1.097265  0.6125  0.5600\n",
-       "3197   3198  1.395174  0.8100  0.5850\n",
-       "3198   3199  0.895653  0.5075  0.5625\n",
-       "3199   3200  2.016078  1.2750  0.6325\n",
+       "3195   3196  1.667221  1.2375  0.6125\n",
+       "3196   3197  1.418193  0.9000  0.6250\n",
+       "3197   3198  1.224724  0.6825  0.6025\n",
+       "3198   3199  1.338024  0.7775  0.6300\n",
+       "3199   3200  1.622891  1.0550  0.6075\n",
        "\n",
        "[3200 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.494011630865443, 0.8989500000000001, 0.59959921875]"
+       "[1.4663353025715906, 0.89627109375, 0.59904609375]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC de W: (1.4849667633700756, 1.5030564983608103)\n",
-      "IC de Nq: (0.8930741882166134, 0.9048258117833868)\n"
+      "IC de W: (1.45846636800006, 1.4742042371431212)\n",
+      "IC de Nq: (0.8914087659178312, 0.9011334215821688)\n"
      ]
     }
    ],
@@ -251,15 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W precision: 0.00605408104495673\n",
-      "Nq precision: 0.006536305449009063\n"
+      "W precision: 0.005366395092398324\n",
+      "Nq precision: 0.005425063762599761\n"
      ]
     }
    ],
