Fixed np.array error

--- a/data/data_analytics.ipynb
+++ b/data/data_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-6-65abecd2f338>:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  df = pd.read_csv('results_fcfs-400-0,6.csv',\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('results_fcfs-400-0,6.csv',\n",
-    " delimiter=', ', header=None, names=['batch', 'E_W', 'E_Nq', 'E_Ns'], skiprows=1)"
+    "df = pd.read_csv('../src/results_fcfs-400-0,6.csv', delimiter=',', header=None, names=['batch', 'E_W', 'E_Nq', 'E_Ns'], skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -77,37 +67,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.499104</td>\n",
-       "      <td>0.9075</td>\n",
-       "      <td>0.6000</td>\n",
+       "      <td>1.297820</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.5625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1.901301</td>\n",
-       "      <td>1.1675</td>\n",
-       "      <td>0.6025</td>\n",
+       "      <td>1.408964</td>\n",
+       "      <td>0.7925</td>\n",
+       "      <td>0.6000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.908558</td>\n",
-       "      <td>0.4975</td>\n",
-       "      <td>0.5875</td>\n",
+       "      <td>1.096503</td>\n",
+       "      <td>0.7000</td>\n",
+       "      <td>0.6325</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1.167924</td>\n",
-       "      <td>0.6575</td>\n",
-       "      <td>0.5725</td>\n",
+       "      <td>1.754517</td>\n",
+       "      <td>1.0700</td>\n",
+       "      <td>0.6025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1.580338</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>0.6150</td>\n",
+       "      <td>1.684256</td>\n",
+       "      <td>0.9850</td>\n",
+       "      <td>0.6675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -119,37 +109,37 @@
        "    <tr>\n",
        "      <th>3195</th>\n",
        "      <td>3196</td>\n",
-       "      <td>1.055117</td>\n",
-       "      <td>0.6100</td>\n",
-       "      <td>0.5325</td>\n",
+       "      <td>1.209993</td>\n",
+       "      <td>0.6000</td>\n",
+       "      <td>0.5150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3196</th>\n",
        "      <td>3197</td>\n",
-       "      <td>1.124668</td>\n",
-       "      <td>0.6025</td>\n",
-       "      <td>0.6000</td>\n",
+       "      <td>1.235442</td>\n",
+       "      <td>0.6975</td>\n",
+       "      <td>0.5900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3197</th>\n",
        "      <td>3198</td>\n",
-       "      <td>1.230931</td>\n",
-       "      <td>0.7075</td>\n",
-       "      <td>0.5900</td>\n",
+       "      <td>1.166647</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.5350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3198</th>\n",
        "      <td>3199</td>\n",
-       "      <td>2.151419</td>\n",
-       "      <td>1.4000</td>\n",
-       "      <td>0.6500</td>\n",
+       "      <td>1.129580</td>\n",
+       "      <td>0.6200</td>\n",
+       "      <td>0.5400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3199</th>\n",
        "      <td>3200</td>\n",
-       "      <td>1.246519</td>\n",
-       "      <td>0.6950</td>\n",
-       "      <td>0.5550</td>\n",
+       "      <td>1.008603</td>\n",
+       "      <td>0.5725</td>\n",
+       "      <td>0.5225</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -158,22 +148,22 @@
       ],
       "text/plain": [
        "      batch       E_W    E_Nq    E_Ns\n",
-       "0         1  1.499104  0.9075  0.6000\n",
-       "1         2  1.901301  1.1675  0.6025\n",
-       "2         3  0.908558  0.4975  0.5875\n",
-       "3         4  1.167924  0.6575  0.5725\n",
-       "4         5  1.580338  1.0000  0.6150\n",
+       "0         1  1.297820  0.7775  0.5625\n",
+       "1         2  1.408964  0.7925  0.6000\n",
+       "2         3  1.096503  0.7000  0.6325\n",
+       "3         4  1.754517  1.0700  0.6025\n",
+       "4         5  1.684256  0.9850  0.6675\n",
        "...     ...       ...     ...     ...\n",
-       "3195   3196  1.055117  0.6100  0.5325\n",
-       "3196   3197  1.124668  0.6025  0.6000\n",
-       "3197   3198  1.230931  0.7075  0.5900\n",
-       "3198   3199  2.151419  1.4000  0.6500\n",
-       "3199   3200  1.246519  0.6950  0.5550\n",
+       "3195   3196  1.209993  0.6000  0.5150\n",
+       "3196   3197  1.235442  0.6975  0.5900\n",
+       "3197   3198  1.166647  0.7775  0.5350\n",
+       "3198   3199  1.129580  0.6200  0.5400\n",
+       "3199   3200  1.008603  0.5725  0.5225\n",
        "\n",
        "[3200 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.4935561744396033, 0.8965, 0.5994062499999999]"
+       "[1.4950514041524676, 0.8989125000000001]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,20 +197,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.21989403, 0.12184603])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "soma = np.array([0, 0])\n",
+    "soma = np.zeros(2)\n",
     "for index, row in df.iterrows():\n",
     "    soma[0] += (row['E_W'] - avgs[0])**2\n",
     "    soma[1] += (row['E_Nq'] - avgs[1])**2\n",
-    "var = soma * 1/(len(df) - 1)"
+    "var = soma * 1/(len(df) - 1)\n",
+    "display(var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC de W: (1.4848065573801492, 1.5023057914990574)\n",
-      "IC de Nq: (0.8909189873314064, 0.9020810126685935)\n"
+      "IC da média de W: (1.4788038572018631, 1.511298951103072)\n",
+      "IC da média de Nq: (0.8868180316428131, 0.9110069683571871)\n"
      ]
     }
    ],
@@ -250,15 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W precision: 0.005858244376203015\n",
-      "Nq precision: 0.0062253348227479825\n"
+      "W mean precision: 0.010867550711284799\n",
+      "Nq mean precision: 0.01345455576286565\n"
      ]
     }
    ],
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC da variância de W: (10.723860589812332, 75.55555555555556)\n",
-      "IC da variância de Nq: (4.3631393576197235, 30.74074074074074)\n"
+      "IC da variância de W: (36.97844709199788, 260.5337033448428)\n",
+      "IC da variância de Nq: (20.490220548809255, 144.36498722222163)\n"
      ]
     }
    ],
@@ -302,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W var precision: 0.7514155503383511\n",
+      "W var precision: 0.7514155503383512\n",
       "Nq var precision: 0.7514155503383511\n"
      ]
     }
@@ -324,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 32-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -338,12 +339,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6d074f277f70aa5a2a7ed6e7ffdb9ccaaf56333bcaecc33c5069b9d0e515dfab"
+    "hash": "9eba946ae18c2fd52bd7ee0675653c9ba3cc2017ffd7c41149393a04d904615d"
    }
   }
  },
